--- a/hopenhayn.ipynb
+++ b/hopenhayn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "34753ac1",
+   "id": "3982f75e",
    "metadata": {},
    "source": [
     "# The Hopenhayn Entry-Exit Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "38c058db",
+   "id": "337d022d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e939112a",
+   "id": "f966ef78",
    "metadata": {},
    "source": [
     "## Outline\n",
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08b44ee8",
+   "id": "b28cd29b",
    "metadata": {
     "hide-output": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66810707",
+   "id": "f921764a",
    "metadata": {},
    "source": [
     "We will use the following imports."
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf7cb653",
+   "id": "6d5f35db",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a7c9e3d",
+   "id": "dd462900",
    "metadata": {},
    "source": [
     "## The Model"
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d048611",
+   "id": "9269e912",
    "metadata": {},
    "source": [
     "### Environment\n",
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f3e0568",
+   "id": "e6dd9335",
    "metadata": {},
    "source": [
     "### Firm decisions\n",
@@ -175,7 +175,7 @@
     "The firm makes their stop-continue choice by first solving for the value function, which is the unique solution in a class of continuous functions $ \\mathscr C $ (details omitted) to\n",
     "\n",
     "\n",
-    "<a id='equation-704560ba-ce2a-430b-9096-219dbe2af4de'></a>\n",
+    "<a id='equation-72e8d8de-ab61-4768-afe4-3895b901ca8c'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    v(\\varphi, p) = \\pi(\\varphi, p) + \\beta \n",
@@ -188,7 +188,7 @@
     "Given $ \\bar v $, we let $ \\bar \\varphi $ be the exit threshold function defined by\n",
     "\n",
     "\n",
-    "<a id='equation-de59b1cd-ee44-41b5-8204-55ca8a1363f6'></a>\n",
+    "<a id='equation-06ba1841-34de-4b1b-8aaa-99aa983e97af'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\bar \\varphi(p) := \n",
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7cd5b0aa",
+   "id": "e846eb2e",
    "metadata": {},
    "source": [
     "### Equilibrium\n",
@@ -242,7 +242,7 @@
     "distribution of firms over productivity levels, such that the goods market clears, or\n",
     "\n",
     "\n",
-    "<a id='equation-5850681d-44c2-424a-a298-939306a5f294'></a>\n",
+    "<a id='equation-d2e564d5-b216-406f-a3ad-eb4d5909828e'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int q( \\varphi, p) \\mu(d \\varphi) = D(p),\n",
@@ -252,7 +252,7 @@
     "the *invariance condition* over the firm distribution\n",
     "\n",
     "\n",
-    "<a id='equation-0d71b263-201a-4dd5-890f-10e9ce9a8089'></a>\n",
+    "<a id='equation-5f4e4c5f-0183-4357-bd8e-8525251fadd9'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -266,7 +266,7 @@
     "holds (see below for intuition), the *equilibrium entry condition*\n",
     "\n",
     "\n",
-    "<a id='equation-0c504b1c-1d19-4381-aaa1-ac5fc706df98'></a>\n",
+    "<a id='equation-7bd6c65a-0651-4117-9661-57fdbeb3ea70'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\int \\bar v( \\varphi, p) \\, \\gamma(d \\varphi) = c_e\n",
@@ -276,7 +276,7 @@
     "holds, and the *balanced entry and exit condition*\n",
     "\n",
     "\n",
-    "<a id='equation-977eee36-ad0d-4aaa-9e77-d825bfeb255f'></a>\n",
+    "<a id='equation-c17109a1-6376-47b9-9261-1c7fd92b82e6'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    M = \\mu \\{ \\varphi < \\bar \\varphi(p) \\}\n",
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "141444cf",
+   "id": "d0ae8f73",
    "metadata": {},
    "source": [
     "### Computing equilibrium\n",
@@ -301,7 +301,7 @@
     "exit into the time invariance condition, yielding\n",
     "\n",
     "\n",
-    "<a id='equation-612c5a0d-68fa-4109-ab6a-e80451da7f5d'></a>\n",
+    "<a id='equation-212db984-13d6-4b48-968f-d408d5e7f406'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\mu (B) \n",
@@ -313,7 +313,7 @@
     "where $ \\Pi $ is the transition kernel on $ \\mathbb R_+ $ defined by\n",
     "\n",
     "\n",
-    "<a id='equation-480138f0-383b-4cdd-b250-75514cc333ce'></a>\n",
+    "<a id='equation-d64162f0-c7b9-4b41-ab34-f96ab8264df7'></a>\n",
     "$$\n",
     "\\begin{equation}\n",
     "    \\Pi(\\varphi, B) \n",
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d923bf",
+   "id": "1b865e31",
    "metadata": {},
    "source": [
     "### Specification of dynamics\n",
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45b039dc",
+   "id": "1d74c439",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a434a5df",
+   "id": "2c05b115",
    "metadata": {
     "hide-output": false
    },
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0e436ad",
+   "id": "8518ef08",
    "metadata": {},
    "source": [
     "We store the parameters, grids and Monte Carlo draws in a `namedtuple`."
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d18d6c6",
+   "id": "c9b18b77",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1edde246",
+   "id": "a2d26f43",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d1d606",
+   "id": "b2ad02df",
    "metadata": {
     "hide-output": false
    },
@@ -456,7 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94fdfc22",
+   "id": "3f9b1753",
    "metadata": {
     "hide-output": false
    },
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752aef3f",
+   "id": "e1e8bc72",
    "metadata": {},
    "source": [
     "Let us write down functions for profits and output."
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6993a7d5",
+   "id": "cb4bed4e",
    "metadata": {
     "hide-output": false
    },
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4813675",
+   "id": "f278f055",
    "metadata": {
     "hide-output": false
    },
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3c0b29b",
+   "id": "2577f44a",
    "metadata": {},
    "source": [
     "Let’s write code to simulate a cross-section of firms given a particular value for the exit threshold (rather than an exit threshold function).\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d583d50",
+   "id": "b3553594",
    "metadata": {
     "hide-output": false
    },
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49033822",
+   "id": "dff53d9c",
    "metadata": {
     "hide-output": false
    },
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4acd234f",
+   "id": "6a603e99",
    "metadata": {},
    "source": [
     "Our next function runs the cross-section forward in time `sim_length` periods."
@@ -594,7 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "935e023b",
+   "id": "3019fbc6",
    "metadata": {
     "hide-output": false
    },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8a19e07",
+   "id": "12d614db",
    "metadata": {},
    "source": [
     "Here’s a utility function to compute the expected value\n",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0404fc22",
+   "id": "bc68bd04",
    "metadata": {
     "hide-output": false
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5801f3f5",
+   "id": "9ae03ada",
    "metadata": {},
    "source": [
     "Now let’s vectorize this function in $ \\varphi $ and then write another function that computes the expected value across all $ \\varphi $ in `φ_grid`"
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "162e0492",
+   "id": "f1da573c",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "546cc9cb",
+   "id": "ce5e87e1",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de35bc4c",
+   "id": "95205c9a",
    "metadata": {},
    "source": [
     "Here is the Bellman operator $ T $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba679b30",
+   "id": "1148d49f",
    "metadata": {
     "hide-output": false
    },
@@ -729,7 +729,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7d2458e",
+   "id": "7fa6401b",
    "metadata": {},
    "source": [
     "The next function takes $ v, p $ as inputs and, conditional on the value function\n",
@@ -739,7 +739,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac498cbd",
+   "id": "16bee762",
    "metadata": {
     "hide-output": false
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8000e6d0",
+   "id": "2bd87a61",
    "metadata": {},
    "source": [
     "We use value function iteration (VFI) to compute the value function $ \\bar v(\\cdot, p) $, taking $ p $ as given.\n",
@@ -769,7 +769,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a622e82",
+   "id": "00482d17",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "525d1025",
+   "id": "a365ad30",
    "metadata": {
     "hide-output": false
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "84e08e2a",
+   "id": "2e91a063",
    "metadata": {},
    "source": [
     "We need to solve for the equilibrium price, which is the $ p $ satisfying\n",
@@ -850,7 +850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2216e52f",
+   "id": "24486a92",
    "metadata": {
     "hide-output": false
    },
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da4a835",
+   "id": "c65390aa",
    "metadata": {},
    "source": [
     "We are now ready to compute all elements of the stationary recursive equilibrium."
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2133291a",
+   "id": "3b0f3ff7",
    "metadata": {
     "hide-output": false
    },
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b622b0",
+   "id": "33aa690a",
    "metadata": {},
    "source": [
     "## Solving the model"
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e724c175",
+   "id": "4f6a131c",
    "metadata": {},
    "source": [
     "### Preliminary calculations\n",
@@ -949,7 +949,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0adc1c71",
+   "id": "c16e9176",
    "metadata": {
     "hide-output": false
    },
@@ -961,7 +961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37bd8b6",
+   "id": "5e883aa0",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to compute the value function at a given price\n",
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dc76104",
+   "id": "2581902e",
    "metadata": {
     "hide-output": false
    },
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16e9b6aa",
+   "id": "ee1afe42",
    "metadata": {},
    "source": [
     "Let’s run the code again to eliminate compile time."
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3beb5872",
+   "id": "6a6b1d22",
    "metadata": {
     "hide-output": false
    },
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af7f8ff",
+   "id": "5a643488",
    "metadata": {},
    "source": [
     "Let’s have a look at the net entry value as a function of price\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b65c1e6c",
+   "id": "1e69a093",
    "metadata": {
     "hide-output": false
    },
@@ -1039,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6372512",
+   "id": "eaf22613",
    "metadata": {},
    "source": [
     "Below we solve for the zero of this function to calculate $ p* $.\n",
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dda9db16",
+   "id": "fd7e7d42",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1060,7 +1060,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff09fe9",
+   "id": "97c5ea65",
    "metadata": {
     "hide-output": false
    },
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a482549",
+   "id": "978fa62e",
    "metadata": {},
    "source": [
     "Let’s run the code again to get rid of compile time."
@@ -1082,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e559ee3a",
+   "id": "722ab400",
    "metadata": {
     "hide-output": false
    },
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4973cb",
+   "id": "86b0082d",
    "metadata": {},
    "source": [
     "Let’s check that $ p^* $ is close to 1.5"
@@ -1104,7 +1104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34d290fb",
+   "id": "f30a9724",
    "metadata": {
     "hide-output": false
    },
@@ -1115,7 +1115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "123615bf",
+   "id": "5c771ad5",
    "metadata": {},
    "source": [
     "Here is a plot of the value function $ \\bar v(\\cdot, p^*) $."
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04dc999c",
+   "id": "c7fad146",
    "metadata": {
     "hide-output": false
    },
@@ -1140,7 +1140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f852163",
+   "id": "288b58fd",
    "metadata": {},
    "source": [
     "Let’s have a look at the firm size distribution, with firm size measured by output."
@@ -1149,7 +1149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a2f3e53",
+   "id": "2deda6be",
    "metadata": {
     "hide-output": false
    },
@@ -1161,7 +1161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6627260f",
+   "id": "d33c9fa2",
    "metadata": {
     "hide-output": false
    },
@@ -1178,7 +1178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43ae69aa",
+   "id": "f77b197c",
    "metadata": {},
    "source": [
     "## Pareto tails\n",
@@ -1229,7 +1229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5444728b",
+   "id": "056d57ac",
    "metadata": {
     "hide-output": false
    },
@@ -1246,7 +1246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db1bc977",
+   "id": "15b5cce2",
    "metadata": {},
    "source": [
     "Let’s plot the empirical counter CDF of the output distribution."
@@ -1255,7 +1255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd2f95a7",
+   "id": "110cee66",
    "metadata": {
     "hide-output": false
    },
@@ -1276,7 +1276,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8511a794",
+   "id": "e8f859da",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6872566f",
+   "id": "4b61fc15",
    "metadata": {},
    "source": [
     "## Exercise 19.1\n",
@@ -1299,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d34c6ab",
+   "id": "e5d9f73d",
    "metadata": {
     "hide-output": false
    },
@@ -1316,7 +1316,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c73d72f",
+   "id": "9d9a7041",
    "metadata": {},
    "source": [
     "This plot is not linear — as expected, since we are using a folded normal distribution."
@@ -1324,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d633a6a",
+   "id": "38e4a684",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.1](https://jax.quantecon.org/#hopen_ex1)"
@@ -1333,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0301a98",
+   "id": "727717f5",
    "metadata": {
     "hide-output": false
    },
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23cfcb53",
+   "id": "4e845869",
    "metadata": {},
    "source": [
     "This looks very linear — the model generates Pareto tails.\n",
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2dff90b1",
+   "id": "1da7faec",
    "metadata": {},
    "source": [
     "## Exercise 19.2\n",
@@ -1374,7 +1374,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15004393",
+   "id": "e1771d2a",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4529a9d2",
+   "id": "df9bc284",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 19.2](https://jax.quantecon.org/#hopen_ex2)"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd23718b",
+   "id": "5e7035f3",
    "metadata": {
     "hide-output": false
    },
@@ -1418,7 +1418,7 @@
   }
  ],
  "metadata": {
-  "date": 1723441294.991157,
+  "date": 1729509368.7653978,
   "filename": "hopenhayn.md",
   "kernelspec": {
    "display_name": "Python",
