--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0861dbbc",
+   "id": "d109d3bf",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fb3044b",
+   "id": "fa3cac7f",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0adc71f",
+   "id": "cf533d10",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c13f5e71",
+   "id": "2a0d1d8d",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f343438f",
+   "id": "706b1712",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6241edb5",
+   "id": "2e479f18",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1186919",
+   "id": "59d2f00f",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0c70497",
+   "id": "b1234597",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -100,7 +100,7 @@
   }
  ],
  "metadata": {
-  "date": 1723441295.0327506,
+  "date": 1729509368.808025,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
