--- a/markov_asset.ipynb
+++ b/markov_asset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8cdd61dd",
+   "id": "e2c41516",
    "metadata": {},
    "source": [
     "# An Asset Pricing Problem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8097b3af",
+   "id": "161bad89",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "536e2ca4",
+   "id": "c0bef7bb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02aca335",
+   "id": "1db8c4d8",
    "metadata": {
     "hide-output": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99d45e13",
+   "id": "8e6abdd9",
    "metadata": {},
    "source": [
     "In addition to JAX and Anaconda, this lecture will need the following libraries:"
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "780822a5",
+   "id": "099e510a",
    "metadata": {
     "hide-output": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "192fb22b",
+   "id": "2c83b03d",
    "metadata": {},
    "source": [
     "Below we use the following imports"
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1f0720a",
+   "id": "ae111961",
    "metadata": {
     "hide-output": false
    },
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "622ac419",
+   "id": "155a3f1b",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase precision."
@@ -118,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c9fcac2",
+   "id": "cec2bfa5",
    "metadata": {
     "hide-output": false
    },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90ba0c54",
+   "id": "a10bcf18",
    "metadata": {},
    "source": [
     "## Pricing a single payoff\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebc64c30",
+   "id": "74f485df",
    "metadata": {},
    "source": [
     "## Pricing a cash flow\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47eb4f87",
+   "id": "00b8e158",
    "metadata": {},
    "source": [
     "## Choosing the stochastic discount factor\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c8aee90",
+   "id": "5b497ec9",
    "metadata": {},
    "source": [
     "## Solving for the price-dividend ratio\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c0ab607",
+   "id": "0ac3230b",
    "metadata": {},
    "source": [
     "## Code\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d15250ca",
+   "id": "c38e1936",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ba1f670",
+   "id": "d175fa37",
    "metadata": {},
    "source": [
     "The next function verifies that the spectral radius of a given matrix is $ < 1 $."
@@ -506,7 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bed80139",
+   "id": "cb12c8e5",
    "metadata": {
     "hide-output": false
    },
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6557546",
+   "id": "199485c3",
    "metadata": {},
    "source": [
     "In what follows we assume that $ \\{X_t\\} $, the state process, is a discretization of the AR(1) process\n",
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e12ab32",
+   "id": "476a7aa6",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e37e5de",
+   "id": "8c23bcc3",
    "metadata": {},
    "source": [
     "Our first step is to construct the matrix $ K $ defined in [(9.15)](#equation-eq-ntecxdk).\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9b9ca01",
+   "id": "8efe174b",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4440f2f",
+   "id": "dfac66c0",
    "metadata": {},
    "source": [
     "To exploit the parallelization capabilities of JAX, let’s also write a vectorized (i.e., loop-free) implementation."
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8561701",
+   "id": "95b52c05",
    "metadata": {
     "hide-output": false
    },
@@ -632,7 +632,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b09ee78d",
+   "id": "8258cdcd",
    "metadata": {},
    "source": [
     "These two functions produce the same output:"
@@ -641,7 +641,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d029e8d6",
+   "id": "9f9811b1",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d905f3f0",
+   "id": "d5ab4418",
    "metadata": {},
    "source": [
     "Now we can compute the price-dividend ratio:"
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "737441d7",
+   "id": "2805408d",
    "metadata": {
     "hide-output": false
    },
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c8f8631",
+   "id": "a51e6783",
    "metadata": {},
    "source": [
     "Here’s a plot of $ v $ as a function of the state for several values of $ \\gamma $."
@@ -710,7 +710,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c01c522c",
+   "id": "2c6d1778",
    "metadata": {
     "hide-output": false
    },
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "977f5a1f",
+   "id": "7a1c97b5",
    "metadata": {},
    "source": [
     "Notice that $ v $ is decreasing in each case.\n",
@@ -748,7 +748,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b602285a",
+   "id": "c5e26c2f",
    "metadata": {},
    "source": [
     "## An Extended Example\n",
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf0f250a",
+   "id": "bc1568d8",
    "metadata": {},
    "source": [
     "## Numpy Version\n",
@@ -915,7 +915,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e284eab8",
+   "id": "719d66a1",
    "metadata": {
     "hide-output": false
    },
@@ -960,7 +960,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccfcd89c",
+   "id": "e3fd4410",
    "metadata": {},
    "source": [
     "Now we provide a function to compute the matrix $ A $."
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8244dfe",
+   "id": "0fa15c2a",
    "metadata": {
     "hide-output": false
    },
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5efec946",
+   "id": "e82579a0",
    "metadata": {},
    "source": [
     "Here’s our function to compute the price-dividend ratio for the stochastic volatility model."
@@ -1007,7 +1007,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7fa3ae8",
+   "id": "08d88848",
    "metadata": {
     "hide-output": false
    },
@@ -1050,7 +1050,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24504c65",
+   "id": "99c80a9c",
    "metadata": {},
    "source": [
     "Let’s create an instance of the model and solve it."
@@ -1059,7 +1059,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0fa89ff",
+   "id": "ba68708b",
    "metadata": {
     "hide-output": false
    },
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0299a2fc",
+   "id": "b0e56931",
    "metadata": {},
    "source": [
     "Let’s run it to compile."
@@ -1080,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42dbf2d8",
+   "id": "d565d409",
    "metadata": {
     "hide-output": false
    },
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95fa5981",
+   "id": "a7240506",
    "metadata": {},
    "source": [
     "Let’s run it again to remove the compile."
@@ -1103,7 +1103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36efafb9",
+   "id": "fb66349a",
    "metadata": {
     "hide-output": false
    },
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09eb9aab",
+   "id": "ff532c99",
    "metadata": {},
    "source": [
     "Here are some plots of the solution $ v $ along the three dimensions."
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09f8bce3",
+   "id": "2013188a",
    "metadata": {
     "hide-output": false
    },
@@ -1143,7 +1143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d6879d2",
+   "id": "72c74505",
    "metadata": {
     "hide-output": false
    },
@@ -1160,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "145baf43",
+   "id": "6849d097",
    "metadata": {
     "hide-output": false
    },
@@ -1176,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09507590",
+   "id": "529799cb",
    "metadata": {},
    "source": [
     "## JAX Version\n",
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "918294d6",
+   "id": "b484270b",
    "metadata": {
     "hide-output": false
    },
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7df67190",
+   "id": "53d5cced",
    "metadata": {},
    "source": [
     "Here’s a function to compute $ A $.\n",
@@ -1226,7 +1226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5d3b748",
+   "id": "4ddccd57",
    "metadata": {
     "hide-output": false
    },
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a0b0fd3",
+   "id": "ae6139e9",
    "metadata": {},
    "source": [
     "Here’s the function that computes the solution."
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee2d6acc",
+   "id": "11541326",
    "metadata": {
     "hide-output": false
    },
@@ -1303,7 +1303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4fb2fd9",
+   "id": "6fe40755",
    "metadata": {},
    "source": [
     "Now let’s target these functions for JIT-compilation, while using `static_argnums` to indicate that the function will need to be recompiled when `shapes` changes."
@@ -1312,7 +1312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00088c20",
+   "id": "ad109f75",
    "metadata": {
     "hide-output": false
    },
@@ -1325,7 +1325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cba371ae",
+   "id": "7637dbe4",
    "metadata": {
     "hide-output": false
    },
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5967c5f6",
+   "id": "6fb48494",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to run with compile time included."
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d6697f8",
+   "id": "46f63ac1",
    "metadata": {
     "hide-output": false
    },
@@ -1362,7 +1362,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c76755e",
+   "id": "76a11da5",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1371,7 +1371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd19c661",
+   "id": "897cc4a8",
    "metadata": {
     "hide-output": false
    },
@@ -1385,7 +1385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52073889",
+   "id": "09329c07",
    "metadata": {},
    "source": [
     "Here’s the ratio of times:"
@@ -1394,7 +1394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d44b7b5",
+   "id": "76729a4f",
    "metadata": {
     "hide-output": false
    },
@@ -1405,7 +1405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c730f3e7",
+   "id": "4d646ba6",
    "metadata": {},
    "source": [
     "Let’s check that the NumPy and JAX versions realize the same solution."
@@ -1414,7 +1414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6583b61b",
+   "id": "17d55792",
    "metadata": {
     "hide-output": false
    },
@@ -1427,7 +1427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7498c619",
+   "id": "0bc27cd0",
    "metadata": {},
    "source": [
     "## A memory-efficient JAX version\n",
@@ -1444,7 +1444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b9bef9d",
+   "id": "e7380551",
    "metadata": {
     "hide-output": false
    },
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e782366d",
+   "id": "15949bb5",
    "metadata": {},
    "source": [
     "Now we write a version of the solution function for the price-dividend ratio\n",
@@ -1482,7 +1482,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88acf7b1",
+   "id": "021e0142",
    "metadata": {
     "hide-output": false
    },
@@ -1504,7 +1504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2bb526bc",
+   "id": "57f60641",
    "metadata": {},
    "source": [
     "Let’s target these functions for JIT compilation."
@@ -1513,7 +1513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "551d4380",
+   "id": "55cb9e0a",
    "metadata": {
     "hide-output": false
    },
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2a7b7a9",
+   "id": "7acae36c",
    "metadata": {},
    "source": [
     "Let’s time the solution with compile time included."
@@ -1534,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa125ef8",
+   "id": "eca4b3b1",
    "metadata": {
     "hide-output": false
    },
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "305e9dfe",
+   "id": "5751ba0f",
    "metadata": {},
    "source": [
     "And now let’s see without compile time."
@@ -1557,7 +1557,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ba3abe7",
+   "id": "160483df",
    "metadata": {
     "hide-output": false
    },
@@ -1571,7 +1571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff3f1c1e",
+   "id": "5c2f1e80",
    "metadata": {},
    "source": [
     "Let’s verify the solution again:"
@@ -1580,7 +1580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9da08ac6",
+   "id": "d7629b18",
    "metadata": {
     "hide-output": false
    },
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66d78b65",
+   "id": "53f1e4c0",
    "metadata": {},
    "source": [
     "Here’s the ratio of times between memory-efficient and direct version:"
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36c2f1f9",
+   "id": "7c753f79",
    "metadata": {
     "hide-output": false
    },
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a234adc1",
+   "id": "31a3dbe3",
    "metadata": {},
    "source": [
     "The speed is somewhat faster and, moreover, we can now work with much larger grids.\n",
@@ -1622,7 +1622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9356dfc",
+   "id": "c8f352fd",
    "metadata": {
     "hide-output": false
    },
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ece1b4ca",
+   "id": "88cd3301",
    "metadata": {},
    "source": [
     "The solution is computed relatively quickly and without memory issues.\n",
@@ -1650,7 +1650,7 @@
   }
  ],
  "metadata": {
-  "date": 1723441295.3874,
+  "date": 1729509369.1646976,
   "filename": "markov_asset.md",
   "kernelspec": {
    "display_name": "Python",
