--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "199f2a82",
+   "id": "b9c5081e",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "160b82ff",
+   "id": "bedfc0e6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b321d24",
+   "id": "0d3d09f6",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6628a8f",
+   "id": "7f573b65",
    "metadata": {
     "hide-output": false
    },
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b930e24",
+   "id": "ba2b3f04",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40fe4090",
+   "id": "27a3bafb",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a87b2b9",
+   "id": "d3edb610",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36d2f172",
+   "id": "3db0af0c",
    "metadata": {
     "hide-output": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4899f214",
+   "id": "41262302",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1951705",
+   "id": "3bed4a61",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "257ba15c",
+   "id": "2ce974a0",
    "metadata": {},
    "source": [
     "Here we go"
@@ -168,7 +168,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51fe099e",
+   "id": "31438ced",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a40228c3",
+   "id": "77a415c6",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d015677",
+   "id": "03c11e57",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -239,7 +239,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e463baf",
+   "id": "7e612ca6",
    "metadata": {
     "hide-output": false
    },
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "961490a5",
+   "id": "a14dcdc2",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12a318a4",
+   "id": "2d018346",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -286,7 +286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed71cee4",
+   "id": "394a7b87",
    "metadata": {
     "hide-output": false
    },
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "450298bf",
+   "id": "c2928866",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77070752",
+   "id": "d9da35d7",
    "metadata": {
     "hide-output": false
    },
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e828954",
+   "id": "430e1fd4",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22873ead",
+   "id": "4b80acda",
    "metadata": {
     "hide-output": false
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43929944",
+   "id": "86fcdb38",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17625db6",
+   "id": "ff621905",
    "metadata": {
     "hide-output": false
    },
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "125680e0",
+   "id": "48888cd5",
    "metadata": {},
    "source": [
     "We run it again to eliminate compile time."
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cee2529b",
+   "id": "48b8522f",
    "metadata": {
     "hide-output": false
    },
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c98a646b",
+   "id": "44c657a6",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1785227c",
+   "id": "acf8f6e3",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c567c9cb",
+   "id": "9ddbbe67",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d9868de",
+   "id": "12107da7",
    "metadata": {
     "hide-output": false
    },
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed85c2a0",
+   "id": "5b587bca",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f453e16c",
+   "id": "9119c956",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af198dae",
+   "id": "f6bda1d0",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "277257c2",
+   "id": "5b62ba88",
    "metadata": {},
    "source": [
     "## Exercise 4.1\n",
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08da6b70",
+   "id": "798776c7",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -563,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc26a4c5",
+   "id": "98af8c70",
    "metadata": {
     "hide-output": false
    },
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f03b3b5",
+   "id": "0f5a67cb",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -591,7 +591,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "231e769b",
+   "id": "fdbfa888",
    "metadata": {
     "hide-output": false
    },
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5883975e",
+   "id": "cc1a1a51",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d13471b0",
+   "id": "398b7110",
    "metadata": {
     "hide-output": false
    },
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8803ff3b",
+   "id": "8306b7c9",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98a8a5c8",
+   "id": "22e5f5f9",
    "metadata": {
     "hide-output": false
    },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efeaf892",
+   "id": "1a13f810",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1faf6cec",
+   "id": "88454c68",
    "metadata": {
     "hide-output": false
    },
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69259c47",
+   "id": "86f7b01c",
    "metadata": {
     "hide-output": false
    },
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "378352e2",
+   "id": "10e1821c",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -708,7 +708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b60bd62",
+   "id": "b2f1ff78",
    "metadata": {
     "hide-output": false
    },
@@ -725,7 +725,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd86791",
+   "id": "b19d0c4c",
    "metadata": {
     "hide-output": false
    },
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb568759",
+   "id": "5139f67c",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57c3d4b1",
+   "id": "bd294e58",
    "metadata": {},
    "source": [
     "## Exercise 4.2\n",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e46c610c",
+   "id": "5acaac76",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 4.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -803,7 +803,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19794eab",
+   "id": "ac86a286",
    "metadata": {
     "hide-output": false
    },
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36f1239d",
+   "id": "1b3ce45f",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44f3cec",
+   "id": "c3dcdded",
    "metadata": {
     "hide-output": false
    },
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b638d41f",
+   "id": "e8162f6c",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -863,7 +863,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2d78a15",
+   "id": "9d86a173",
    "metadata": {
     "hide-output": false
    },
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1393dd7b",
+   "id": "4d77d59c",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -882,7 +882,7 @@
   }
  ],
  "metadata": {
-  "date": 1723441295.440486,
+  "date": 1729509369.2189019,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
