--- a/autodiff.ipynb
+++ b/autodiff.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41fef450",
+   "id": "2e08f7a2",
    "metadata": {},
    "source": [
     "# Adventures with Autodiff"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e2b6e85",
+   "id": "9f594ce6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b99a5c24",
+   "id": "1aa9e7d0",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c4e4b01",
+   "id": "4339a8e7",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a100392c",
+   "id": "df99e900",
    "metadata": {},
    "source": [
     "Checking for a GPU:"
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2eb4fa87",
+   "id": "6bcbac8c",
    "metadata": {
     "hide-output": false
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05aaf7a1",
+   "id": "a39a526b",
    "metadata": {},
    "source": [
     "## What is automatic differentiation?\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f35df1c",
+   "id": "c17fb2f6",
    "metadata": {},
    "source": [
     "### Autodiff is not finite differences\n",
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e82e3c",
+   "id": "a4db0e13",
    "metadata": {
     "hide-output": false
    },
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cfc0cd4",
+   "id": "8d472651",
    "metadata": {},
    "source": [
     "This kind of numerical derivative is often inaccurate and unstable.\n",
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ebab4291",
+   "id": "e158022a",
    "metadata": {},
    "source": [
     "### Autodiff is not symbolic calculus\n",
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0469522b",
+   "id": "18ea317c",
    "metadata": {
     "hide-output": false
    },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdb5351c",
+   "id": "25a32a13",
    "metadata": {},
    "source": [
     "Symbolic calculus is not well suited to high performance\n",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57fc6241",
+   "id": "90ccf49b",
    "metadata": {},
    "source": [
     "### Autodiff\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb3a241d",
+   "id": "10007c21",
    "metadata": {},
    "source": [
     "## Some experiments\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc89cf55",
+   "id": "7e565754",
    "metadata": {},
    "source": [
     "### A differentiable function\n",
@@ -256,7 +256,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "061fc398",
+   "id": "8502e8f9",
    "metadata": {
     "hide-output": false
    },
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ab7f398",
+   "id": "188a38ac",
    "metadata": {},
    "source": [
     "We use `grad` to compute the gradient of a real-valued function:"
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df855102",
+   "id": "198e352d",
    "metadata": {
     "hide-output": false
    },
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbd71a1b",
+   "id": "e152bd8c",
    "metadata": {},
    "source": [
     "Let’s plot the result:"
@@ -297,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e84141b",
+   "id": "90579d3d",
    "metadata": {
     "hide-output": false
    },
@@ -309,7 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38ba6983",
+   "id": "79a6358b",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "165ce766",
+   "id": "6283e708",
    "metadata": {},
    "source": [
     "### Absolute value function\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "482af988",
+   "id": "83409e00",
    "metadata": {
     "hide-output": false
    },
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "333ea1f6",
+   "id": "90036319",
    "metadata": {
     "hide-output": false
    },
@@ -360,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82078afe",
+   "id": "50b51612",
    "metadata": {
     "hide-output": false
    },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffb94101",
+   "id": "42bb76d1",
    "metadata": {},
    "source": [
     "At the nondifferentiable point $ 0 $, `jax.grad` returns the right derivative:"
@@ -384,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bd55f65",
+   "id": "97561f64",
    "metadata": {
     "hide-output": false
    },
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3798ce0",
+   "id": "58c1eebd",
    "metadata": {},
    "source": [
     "### Differentiating through control flow\n",
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9768b111",
+   "id": "58c3315c",
    "metadata": {
     "hide-output": false
    },
@@ -427,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207db697",
+   "id": "82488c48",
    "metadata": {
     "hide-output": false
    },
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24b4df0e",
+   "id": "d1f23782",
    "metadata": {
     "hide-output": false
    },
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5eb47b92",
+   "id": "c40b5884",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09bcb598",
+   "id": "07d5e40b",
    "metadata": {},
    "source": [
     "### Differentiating through a linear interpolation\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "362aedcb",
+   "id": "dcfa4ad1",
    "metadata": {
     "hide-output": false
    },
@@ -495,7 +495,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d76268eb",
+   "id": "9565e71a",
    "metadata": {
     "hide-output": false
    },
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e859ba",
+   "id": "8039dc19",
    "metadata": {
     "hide-output": false
    },
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ff05f12",
+   "id": "9f8502b2",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b318bd9",
+   "id": "c731fdc6",
    "metadata": {},
    "source": [
     "## Gradient Descent\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72399477",
+   "id": "27a16986",
    "metadata": {},
    "source": [
     "### A function for gradient descent\n",
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4867dab0",
+   "id": "338ee262",
    "metadata": {
     "hide-output": false
    },
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "597b7310",
+   "id": "ce73bb13",
    "metadata": {},
    "source": [
     "### Simulated data\n",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1bff0fa",
+   "id": "f0f0909f",
    "metadata": {
     "hide-output": false
    },
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "189b2ce6",
+   "id": "c974e8e5",
    "metadata": {
     "hide-output": false
    },
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c05722b0",
+   "id": "53014c80",
    "metadata": {},
    "source": [
     "Let’s start by calculating the estimated slope and intercept using closed form solutions."
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a659cf5",
+   "id": "3fc836d9",
    "metadata": {
     "hide-output": false
    },
@@ -664,7 +664,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1933acbc",
+   "id": "a93f9b16",
    "metadata": {
     "hide-output": false
    },
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93a16830",
+   "id": "b0f503d9",
    "metadata": {
     "hide-output": false
    },
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25546ead",
+   "id": "364759fc",
    "metadata": {},
    "source": [
     "### Minimizing squared loss by gradient descent\n",
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa0f8108",
+   "id": "ab29010a",
    "metadata": {
     "hide-output": false
    },
@@ -720,7 +720,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dbfe529",
+   "id": "de764a1d",
    "metadata": {},
    "source": [
     "Now we minimize it:"
@@ -729,7 +729,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff3ef380",
+   "id": "3ff97b19",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d7c27d7",
+   "id": "6f0ec62e",
    "metadata": {},
    "source": [
     "Let’s plot the results."
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1fc3673e",
+   "id": "73af2873",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78ffa4fe",
+   "id": "ef30c554",
    "metadata": {},
    "source": [
     "Notice that we get the same estimates as we did from the closed form solutions."
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82f92f5b",
+   "id": "f6b7617f",
    "metadata": {},
    "source": [
     "### Adding a squared term\n",
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b3551a3",
+   "id": "9c0480a0",
    "metadata": {
     "hide-output": false
    },
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fa6f846",
+   "id": "4c12f2c9",
    "metadata": {},
    "source": [
     "Now we’re minimizing in three dimensions.\n",
@@ -815,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b27ef902",
+   "id": "b779f89f",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eee0f432",
+   "id": "cd71a944",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744a5df1",
+   "id": "dfd34fae",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2898bb39",
+   "id": "8e9c4c57",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#auto_ex1)\n",
@@ -883,7 +883,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3eb2258e",
+   "id": "5bccaa0e",
    "metadata": {
     "hide-output": false
    },
@@ -897,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65ca9679",
+   "id": "3daf423a",
    "metadata": {
     "hide-output": false
    },
@@ -918,7 +918,7 @@
   }
  ],
  "metadata": {
-  "date": 1723441294.950262,
+  "date": 1729509368.7237475,
   "filename": "autodiff.md",
   "kernelspec": {
    "display_name": "Python",
