--- a/ifp_egm.ipynb
+++ b/ifp_egm.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f20b148",
+   "id": "620e927d",
    "metadata": {},
    "source": [
     "# Endogenous Grid Method"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba036171",
+   "id": "0ad08acc",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff865a2b",
+   "id": "cdb1f501",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "205e99c6",
+   "id": "59da51a8",
    "metadata": {
     "hide-output": false
    },
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e5aa7d1",
+   "id": "03832f88",
    "metadata": {
     "hide-output": false
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9144b40a",
+   "id": "43b1c6f8",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b2c74cc",
+   "id": "ad8b0ad6",
    "metadata": {
     "hide-output": false
    },
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9274e47",
+   "id": "de508fe7",
    "metadata": {},
    "source": [
     "We use 64 bit floating point numbers for extra precision."
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43848877",
+   "id": "5a19e7a4",
    "metadata": {
     "hide-output": false
    },
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53f3ffb8",
+   "id": "3087b186",
    "metadata": {},
    "source": [
     "## Setup\n",
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d019a2b",
+   "id": "133c8e8a",
    "metadata": {
     "hide-output": false
    },
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e25644c9",
+   "id": "63451fef",
    "metadata": {},
    "source": [
     "## Solution method\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21556553",
+   "id": "a340174b",
    "metadata": {},
    "source": [
     "### Euler equation\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90b76558",
+   "id": "b8d56689",
    "metadata": {},
    "source": [
     "### JAX version\n",
@@ -397,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff108412",
+   "id": "6e4fb66e",
    "metadata": {
     "hide-output": false
    },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41a22dd3",
+   "id": "5938cd24",
    "metadata": {},
    "source": [
     "Then we use `jax.jit` to compile $ K $.\n",
@@ -464,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4de580ed",
+   "id": "620f7986",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a0a7179",
+   "id": "de746674",
    "metadata": {},
    "source": [
     "Next we define a successive approximator that repeatedly applies $ K $."
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ada65cf",
+   "id": "a835a32b",
    "metadata": {
     "hide-output": false
    },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f821856",
+   "id": "1b0df3df",
    "metadata": {},
    "source": [
     "### Numba version\n",
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18019260",
+   "id": "711ccfda",
    "metadata": {
     "hide-output": false
    },
@@ -595,7 +595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cee0517",
+   "id": "c6009e04",
    "metadata": {
     "hide-output": false
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0a97a0e",
+   "id": "2a98ff83",
    "metadata": {},
    "source": [
     "## Solutions\n",
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "490dd855",
+   "id": "4328d581",
    "metadata": {},
    "source": [
     "### Outputs"
@@ -662,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0286e9f0",
+   "id": "9f7bcd81",
    "metadata": {
     "hide-output": false
    },
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ff06647",
+   "id": "1b0ede14",
    "metadata": {},
    "source": [
     "Here’s a first run of the JAX code."
@@ -682,7 +682,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51fba997",
+   "id": "494d0359",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2200bc59",
+   "id": "f10bb323",
    "metadata": {},
    "source": [
     "Next let’s solve the same IFP with Numba."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff53e304",
+   "id": "11e7b64c",
    "metadata": {
     "hide-output": false
    },
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "348062fd",
+   "id": "7e46a0f5",
    "metadata": {},
    "source": [
     "Now let’s check the outputs in a plot to make sure they are the same."
@@ -726,7 +726,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c2fbba9",
+   "id": "a17dcd20",
    "metadata": {
     "hide-output": false
    },
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06f18743",
+   "id": "d112fb17",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -767,7 +767,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "381b9c0c",
+   "id": "59b100af",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c0087f8",
+   "id": "07de715b",
    "metadata": {
     "hide-output": false
    },
@@ -799,7 +799,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc0babfb",
+   "id": "eaff79de",
    "metadata": {
     "hide-output": false
    },
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df670d97",
+   "id": "7551dab1",
    "metadata": {},
    "source": [
     "The JAX code is significantly faster, as expected.\n",
@@ -821,7 +821,7 @@
   }
  ],
  "metadata": {
-  "date": 1723441295.018898,
+  "date": 1729509368.7936976,
   "filename": "ifp_egm.md",
   "kernelspec": {
    "display_name": "Python",
