--- a/opt_savings_1.ipynb
+++ b/opt_savings_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ca6bead6",
+   "id": "0a4181eb",
    "metadata": {},
    "source": [
     "# Optimal Savings I: Value Function Iteration"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f417f1b2",
+   "id": "e65d60fa",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99282756",
+   "id": "75173810",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee8c90d0",
+   "id": "39620bd9",
    "metadata": {},
    "source": [
     "We will use the following imports:"
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f4c349a",
+   "id": "b15f4aef",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3347eb51",
+   "id": "43ab3c35",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf3071c8",
+   "id": "7f132f2c",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daff21ed",
+   "id": "fed269fb",
    "metadata": {},
    "source": [
     "We’ll use 64 bit floats to gain extra precision."
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d279636",
+   "id": "60b7625c",
    "metadata": {
     "hide-output": false
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ff6e36d",
+   "id": "5a9460cb",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06cb5405",
+   "id": "c563d8d0",
    "metadata": {},
    "source": [
     "## Starting with NumPy\n",
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c52a202",
+   "id": "6ae8e524",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -179,7 +179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e89fae70",
+   "id": "35f3b9bf",
    "metadata": {
     "hide-output": false
    },
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f19b08ff",
+   "id": "f9d78837",
    "metadata": {},
    "source": [
     "(The function returns sizes of arrays because we use them later to help\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "850aa7f0",
+   "id": "e3be7dff",
    "metadata": {
     "hide-output": false
    },
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c34027a7",
+   "id": "54d22d21",
    "metadata": {},
    "source": [
     "Here are two functions we need for value function iteration.\n",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1906687f",
+   "id": "82c2562f",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a300370",
+   "id": "4595c044",
    "metadata": {},
    "source": [
     "### Value function iteration\n",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ea6aea1",
+   "id": "bd22d0f0",
    "metadata": {
     "hide-output": false
    },
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05ef0d9c",
+   "id": "c9d5cd54",
    "metadata": {},
    "source": [
     "Now we create an instance, unpack it, and test how long it takes to solve the\n",
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19291c1e",
+   "id": "f87c4512",
    "metadata": {
     "hide-output": false
    },
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e13f935",
+   "id": "6e8d798f",
    "metadata": {
     "hide-output": false
    },
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f853ac9",
+   "id": "a3fb214e",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "596f40ed",
+   "id": "f825c220",
    "metadata": {
     "hide-output": false
    },
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed4696f8",
+   "id": "412f3f58",
    "metadata": {},
    "source": [
     "Here’s a plot of the policy function."
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb7db19f",
+   "id": "0899f61f",
    "metadata": {
     "hide-output": false
    },
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a0974a",
+   "id": "038d7d13",
    "metadata": {},
    "source": [
     "## Switching to JAX\n",
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f9f4fc7",
+   "id": "3725dc2a",
    "metadata": {},
    "source": [
     "### Functions and operators\n",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e31e110",
+   "id": "e27f7df0",
    "metadata": {
     "hide-output": false
    },
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2f04de4",
+   "id": "9271aa27",
    "metadata": {},
    "source": [
     "The right hand side of the Bellman equation is the same as the NumPy version\n",
@@ -475,7 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b79eaddf",
+   "id": "c67e8781",
    "metadata": {
     "hide-output": false
    },
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d88ca6d",
+   "id": "649994b3",
    "metadata": {},
    "source": [
     "Some readers might be concerned that we are creating high dimensional arrays,\n",
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71e2884",
+   "id": "d3f1305b",
    "metadata": {
     "hide-output": false
    },
@@ -539,7 +539,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfb9002",
+   "id": "5968158c",
    "metadata": {},
    "source": [
     "In the call above, we indicate to the compiler that `sizes` is static, so the\n",
@@ -551,7 +551,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e9c2fb6",
+   "id": "f12b7ecc",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63132d4b",
+   "id": "a8fdcec7",
    "metadata": {},
    "source": [
     "The next function computes a $ v $-greedy policy given $ v $ (i.e., the policy that\n",
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "641c5bf9",
+   "id": "dcf76011",
    "metadata": {
     "hide-output": false
    },
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07654320",
+   "id": "892a6a38",
    "metadata": {},
    "source": [
     "### Successive approximation\n",
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff45d7d",
+   "id": "c2f7d25e",
    "metadata": {
     "hide-output": false
    },
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1a20b45",
+   "id": "778f5cee",
    "metadata": {},
    "source": [
     "Our value function iteration routine calls `successive_approx_jax` while passing\n",
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "041204e2",
+   "id": "143bee36",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1360b19",
+   "id": "cefc3fa1",
    "metadata": {},
    "source": [
     "### Timing\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f0936bd",
+   "id": "e84a3fc0",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae7b7f4",
+   "id": "52e39ae9",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve this model."
@@ -704,7 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fde59e8c",
+   "id": "2fba84a6",
    "metadata": {
     "hide-output": false
    },
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f89e4058",
+   "id": "82603304",
    "metadata": {},
    "source": [
     "Let’s run it again to eliminate compile time."
@@ -728,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13aba4d6",
+   "id": "10ed04ab",
    "metadata": {
     "hide-output": false
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ce1e7d1",
+   "id": "f51ff3a6",
    "metadata": {},
    "source": [
     "The relative speed gain is"
@@ -751,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43927562",
+   "id": "e627690d",
    "metadata": {
     "hide-output": false
    },
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e28f7d96",
+   "id": "9cdaab34",
    "metadata": {},
    "source": [
     "This is an impressive speed up and in fact we can do better still by switching\n",
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ec830c",
+   "id": "0f761e11",
    "metadata": {},
    "source": [
     "## Switching to vmap\n",
@@ -804,7 +804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85383ce0",
+   "id": "ff03b5e7",
    "metadata": {
     "hide-output": false
    },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e6e04f0",
+   "id": "b7e7634a",
    "metadata": {},
    "source": [
     "Now we successively apply `vmap` to simulate nested loops."
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ef6681f",
+   "id": "c1401578",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "965ea5df",
+   "id": "e329aa68",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator and the `get_greedy` functions for the `vmap` case."
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32364828",
+   "id": "a5352abd",
    "metadata": {
     "hide-output": false
    },
@@ -887,7 +887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce5d4202",
+   "id": "68f9482e",
    "metadata": {},
    "source": [
     "Here’s the iteration routine."
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3c7c407",
+   "id": "cfbeed8d",
    "metadata": {
     "hide-output": false
    },
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64accd08",
+   "id": "501fd3e0",
    "metadata": {},
    "source": [
     "Let’s see how long it takes to solve the model using the `vmap` method."
@@ -921,7 +921,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e584539",
+   "id": "2e1261e5",
    "metadata": {
     "hide-output": false
    },
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcaee1fb",
+   "id": "6b04aa1e",
    "metadata": {},
    "source": [
     "Let’s run it again to get rid of compile time."
@@ -945,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eff64c43",
+   "id": "50a3eadf",
    "metadata": {
     "hide-output": false
    },
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9a206ca",
+   "id": "06d0a1a2",
    "metadata": {},
    "source": [
     "We need to make sure that we got the same result."
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698caa88",
+   "id": "516db0ac",
    "metadata": {
     "hide-output": false
    },
@@ -980,7 +980,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0e53a048",
+   "id": "0d247b0c",
    "metadata": {},
    "source": [
     "Here’s the speed gain associated with switching from the NumPy version to JAX with `vmap`:"
@@ -989,7 +989,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a28cf82",
+   "id": "cee90c91",
    "metadata": {
     "hide-output": false
    },
@@ -1000,7 +1000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37faa48f",
+   "id": "1202027c",
    "metadata": {},
    "source": [
     "And here’s the comparison with the first JAX implementation (which used direct vectorization)."
@@ -1009,7 +1009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1725e60c",
+   "id": "7c8fab4d",
    "metadata": {
     "hide-output": false
    },
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d296774e",
+   "id": "21cc6e2b",
    "metadata": {},
    "source": [
     "The execution times for the two JAX versions are relatively similar.\n",
@@ -1032,7 +1032,7 @@
   }
  ],
  "metadata": {
-  "date": 1723441295.4958937,
+  "date": 1729509369.27677,
   "filename": "opt_savings_1.md",
   "kernelspec": {
    "display_name": "Python",
